# glfw3

./: CMakeLists.txt  build.cmd
MinGW Makefiles/lib/pkgconfig/: glfw3.pc
