cmake_minimum_required(VERSION 3.7)

set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "GLFW_BUILD_EXAMPLES off")
set(GLFW_BUILD_TESTS OFF CACHE BOOL "GLFW_BUILD_TESTS off")
set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW_BUILD_DOCS off")
set(GLFW_INSTALL ON CACHE BOOL "GLFW_INSTALL off")
set(GLFW_DOCUMENT_INTERNALS OFF CACHE BOOL "GLFW_DOCUMENT_INTERNALS off")

add_subdirectory(GLFW)
